--- a/css/style.css
+++ b/css/style.css
@@ -9,15 +9,9 @@ body {
 	word-wrap: break-word;
 }
 
-.header-logo img{
-	height: 30px;
-	width: 100%;
-	display: inline-block;
-}
-
 [data-menu='open'] 
-.header-logo svg {
-    fill: #fff;
+.header-logo img {
+    background: #fff;
 }
 
 .bannerHome {
@@ -84,6 +78,42 @@ body {
 	border-radius: calc(0.25rem - 1px);
   }
 
+  .btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+[type=button], [type=reset], [type=submit], button {
+    -webkit-appearance: button;
+}
+button, select {
+    text-transform: none;
+}
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+}
+
+button {
+    border-radius: 0;
+}
+
   .btn-pink {
 	color: #fff;
 	max-width: 100%;
@@ -132,6 +162,16 @@ button, input {
 	margin: 10px 10px;
 }
 
+@media only screen and (max-width: 950px) {
+    
+    .header-logo img {
+        width: 100%;
+        fill: #FFF;
+        height: 35px;
+        display: inline-block;
+    }
+}
+
 
 @media only screen and (min-width: 951px) {
 
@@ -143,11 +183,10 @@ button, input {
 		box-shadow: 0 .125rem .25rem rgba(0, 0, 0, 0.253)!important;
 	}
 	
-	.header-logo img{
-		height: 50px;
-		width: 100%;
-		display: inline-block;
-	}
+	.header-logo img {
+        width: 100%;
+        display: inline-block;
+    }
 
 	.header-nav-item-link {
 		text-align: center;
